# toy-soldiers

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  THIRD_PARTY_LICENSES.md
.github/ISSUE_TEMPLATE/: card-proposal.yml  playtest-feedback.yml
.github/workflows/: ci-release.yml
data/: cards.json
docs/: ASAN.md  GDD.md  LEGAL.md  PROTOCOL.md  RELEASE.md  ROADMAP_to_v1.md  ROADMAP_to_v2.md  WAN_PLAY.md  concept_board.html  rules-comic.html
docs/store/: itch-page.md  msix-packaging.md  presskit.md  steam-capsules.md  trailer-script.md  vertical-capture-guide.md
packaging/msix/: AppxManifest.xml.template
scripts/: bootstrap-github-v2.ps1  bootstrap-github.ps1  build.ps1  generate-msix-assets.ps1  installer.iss  package-msix.ps1  package.ps1  render-steam-capsules.ps1  verify.ps1
src/: balance_report_main.cpp  content_test_main.cpp  cosmetic_test_main.cpp  event_test_main.cpp  lockstep_test_main.cpp  main.cpp  mode_test_main.cpp  net_test_main.cpp  replay_main.cpp  sim_main.cpp  sokol_imgui_impl.cpp  sokol_impl.c  sokol_impl.m
src/app/: audio.cpp  audio.h  capture.cpp  capture.h  crash_handler.cpp  crash_handler.h  i18n.cpp  i18n.h  session_log.cpp  session_log.h  settings.cpp  settings.h  version.h
src/game/: cards.cpp  cards.h  cosmetics.cpp  cosmetics.h  events.cpp  events.h  golden_seed_test_main.cpp  match.cpp  match.h  play_reason.cpp  play_reason.h  replay.cpp  replay.h  rules.cpp  rules.h  snapshot.cpp  snapshot.h  summary.cpp  summary.h  types.h
src/net/: protocol.cpp  protocol.h  session.cpp  session.h  socket.cpp  socket.h  transport.cpp  transport.h
src/physics/: table_scene.cpp  table_scene.h
src/render/: camera.cpp  camera.h  draw3d.cpp  draw3d.h  qr_texture.cpp  qr_texture.h  ui.cpp  ui.h
